@@ -1,5 +1,1 @@
 EXTRA_DIST = telegnome-logo.png testbeeld.png telegnome-icon.png
-
-pixmapdir = $(datadir)/pixmaps/telegnome
-
-pixmap_DATA = telegnome-logo.png testbeeld.png telegnome-icon.png
