@@ -1,7 +1,8 @@
-AM_CPPFLAGS = -I. -I$(srcdir)/ $(TELEGNOME_CFLAGS)
+AM_CPPFLAGS = -I. -I$(srcdir)/ $(GLIB_CFLAGS) $(TELEGNOME_CFLAGS)
 
-bin_PROGRAMS=telegnome
-telegnome_SOURCES= \
+bin_PROGRAMS = telegnome
+
+telegnome_SOURCES = \
 	main.h \
 	main.c \
 	http.h \
@@ -20,5 +21,14 @@ telegnome_SOURCES= \
 	legacy-config.c \
 	legacy-config.h
 
+telegnome_built = \
+	resources.c \
+	resources.h
+BUILT_SOURCES = $(telegnome_built)
+nodist_telegnome_SOURCES = $(telegnome_built)
+
+resources.c resources.h: telegnome.gresource.xml Makefile $(shell $(GLIB_COMPILE_RESOURCES) --generate-dependencies --sourcedir $(srcdir) $(srcdir)/telegnome.gresource.xml)
+	$(AM_V_GEN) XMLLINT=$(XMLLINT) $(GLIB_COMPILE_RESOURCES) --target $@ --sourcedir $(srcdir) --generate --c-name tg $<
+
 LINK_FLAGS= $(GNOME_LIBDIR) $(INTLLIBS) $(GHTTP_LIB)
-telegnome_LDADD=$(LINK_FLAGS) $(GNOME_LIBDIR) $(TELEGNOME_LIBS)
+telegnome_LDADD=$(LINK_FLAGS) $(GNOME_LIBDIR) $(GLIB_LIBS) $(TELEGNOME_LIBS)
