@@ -20,7 +20,8 @@
 ** Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 **  
 */
-  
+
+#include <stdlib.h>
 #include <string.h>
 
 #include <gio/gio.h>
