@@ -51,8 +51,9 @@ typedef struct _TeleGnome{
 #define TG_ERR_VFS 2
 #define TG_ERR_HTTPQUERY 3     /* error getting http query */
 
-#define TG_NOTFOUND_PIXMAP 	"telegnome/testbeeld.png"
-#define TG_LOGO_PIXMAP 		"telegnome/telegnome-logo.png"
+#define TG_MENU_XML		"/org/gnome/telegnome/menu.xml"
+#define TG_NOTFOUND_PIXMAP 	"/org/gnome/telegnome/pixmaps/testbeeld.png"
+#define TG_LOGO_PIXMAP 		"/org/gnome/telegnome/pixmaps/telegnome-logo.png"
 
 #define TG_KB_TIMEOUT		2500 	/* the timeout before the input fields resets */
 #define TG_LOGO_TIMEOUT		7500	/* the time the logo gets displayed */
