@@ -6,30 +6,29 @@
 #ifndef __MENU_H__
 #define __MENU_H__
 
-#include <libgnomeui/gnome-app-helper.h>
+#include <glib/gi18n.h>
+#include <gtk/gtk.h>
 
-/* the menu */
-static GnomeUIInfo file_menu[] = {
-    GNOMEUIINFO_MENU_QUIT_ITEM(tg_gui_cb_quit, NULL),
-    GNOMEUIINFO_END
+static const GtkActionEntry entries[] = {
+    /* Top level */
+    { "FileMenu", GTK_STOCK_FILE, N_("_File") },
+    { "SettingsMenu", NULL, N_("_Settings") },
+    { "ChannelsMenu", NULL, N_("_Channels") },
+    { "HelpMenu", GTK_STOCK_HELP },
+
+    /* File menu */
+    { "FileQuit", GTK_STOCK_QUIT, NULL, "<control>Q", NULL,
+      G_CALLBACK (tg_gui_cb_quit) },
+
+    /* Settings menu */
+    { "SettingsPreferences", GTK_STOCK_PREFERENCES, NULL, NULL, NULL,
+      G_CALLBACK (tg_gui_cb_preferences) },
+
+    /* Help menu */
+    { "HelpContents", GTK_STOCK_HELP, N_("_Contents"), "F1", NULL,
+      G_CALLBACK (tg_gui_cb_help_contents) },
+    { "HelpAbout", GTK_STOCK_ABOUT, NULL, NULL, NULL,
+      G_CALLBACK (tg_gui_cb_about) }
 };
-
-static GnomeUIInfo settings_menu[] = {
-    GNOMEUIINFO_MENU_PREFERENCES_ITEM(tg_gui_cb_preferences, NULL),
-    GNOMEUIINFO_END
-};
-
-static GnomeUIInfo help_menu[] = {
-    GNOMEUIINFO_HELP(PACKAGE),
-    GNOMEUIINFO_MENU_ABOUT_ITEM(tg_gui_cb_about, NULL),
-    GNOMEUIINFO_END
-};
-
-static GnomeUIInfo menubar[] = {
-    GNOMEUIINFO_MENU_FILE_TREE(file_menu),
-    GNOMEUIINFO_MENU_SETTINGS_TREE(settings_menu),
-    GNOMEUIINFO_MENU_HELP_TREE(help_menu),
-    GNOMEUIINFO_END
- };
 
 #endif
