@@ -2,6 +2,8 @@ Changes in TeleGNOME 0.2.1
 ==========================
 
  * Don't reset current-channel to the first configured channel on startup.
+ * Port from libgnome and libgnomeui to less-deprecated equivalents, mostly
+   GResource and GtkUIManager.
 
 Changes in TeleGNOME 0.2.0
 ==========================
